[gd_scene load_steps=4 format=3 uid="uid://yfuwp3knnjab"]

[ext_resource type="Script" uid="uid://vm8827jnvt7a" path="res://Scenes/UserBoardCell/user_board_cell.gd" id="1_kw2k1"]
[ext_resource type="Texture2D" uid="uid://chmarfosmpr2s" path="res://Scenes/UserBoardCell/user_board_cell.png" id="1_qjlys"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjlys"]
size = Vector2(176, 176)

[node name="UserBoardCell" type="Node2D"]
script = ExtResource("1_kw2k1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(88, 88)
shape = SubResource("RectangleShape2D_qjlys")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qjlys")
centered = false

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
